# golang-rust-grpc

./: .gitignore  README.md
golang_client/: go.mod  main.go
golang_client/proto/: mygrpc.pb.go  mygrpc.proto
rust_server/: Cargo.toml  build.rs
rust_server/proto/: mygrpc.proto
rust_server/src/: main.rs  server.rs
