[package]
name = "rust_server"
version = "0.1.0"
authors = ["lurui <lurui@ipfsforce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # 用来运行 HelloService gRPC 服务器端的可执行文件
name = "rust-server"
path = "src/server.rs"


[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
